Selector Optionsの追加。 難易度のランダム選択機能の設定を追加。

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
 				
 			</div>
 		</div>
+
+		<div class="panel panel-info">
+			<div class="panel-heading">Selecter Options</div>
+
+			<div class="center">
+				<div class="checkbox">
+					<label><input type="checkbox" id="randomize_difficulty" value="" checked="">難易度のランダム選択を有効にする</label>
+				</div>
+			</div>
+		</div>
 	
 		<div class="panel panel-success">
 			<div class="panel-heading">Random Selector</div>
