フッターの追加

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 			<div class="panel-heading">How to use</div>
 			
 			<div class="button-guide">
-				<p>
-					ボタンを押したらランダムで楽曲を選んでくれます。<br />
-				</p>
+				<div class="center">
+					<p>
+						ボタンを押したらランダムで楽曲を選んでくれます。<br />
+					</p>
+				</div>
 				
 				<dl class="dl-horizontal">
 					<dt>？ボタン</dt>
@@ -134,6 +136,16 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="container">
+    		<p class="text-muted">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
+			<p class="text-muted">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
+    		<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
+    		<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a> All Rights Reserved. </p>
+  		</div>
+	</footer>
 
 	<!-- JavaScripts
 	================================================== -->
