ジャケット表示機能の追加

--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
 					<div class="result-title">
 						<p>Result</p>
 					</div>
-					<div class="result-body">
-						
-						<p id="output"><b>PUSH BUTTON</b></p>
+					<div class="result-body">	
+						<p id="output">
+							<img src="" class="jacket">
+							<b>PUSH BUTTON</b>
+						</p>
 					</div>
 				</div>
 			</div>
