フッターの更新

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 	<footer class="footer">
 		<div class="container">
     		<p class="text-muted">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
+			<p class="text-muted">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a>
 			<p class="text-muted">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
     		<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
     		<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a> All Rights Reserved. </p>
