pタグの編集ミスの修正

--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
 				<br />
 			</div>
 		</div>
+
+		<div class="panel panel-warning">
+			<div class="panel-heading">Debug List</div>
+			
+			<div class="center">
+				<br />
+				<div id="result-debug"></div>
+				<br />
+			</div>
+		</div>
 	</div>
 
 	<!-- Footer -->
@@ -144,9 +154,9 @@
 		<div class="container">
 			<p class="text-muted">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
     		<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
-    		<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a> All Rights Reserved. </p>p>
+    		<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a> All Rights Reserved. </p>
 			<p class="text-muted">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a>
-    		<p class="text-muted">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</
+    		<p class="text-muted">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
   		</div>
 	</footer>
 
