--- a/index.html
+++ b/index.html
@@ -169,11 +169,20 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
-    			<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
-    			<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a></p>
-			<p class="text-muted">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a>
-    			<p class="text-muted">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
+			<div class="row">
+				<!-- Left Side -->
+				<div class="col-xs-6">
+					<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a></p>
+					<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
+				</div>
+				
+				<!-- Right Side -->
+				<div class="col-xs-6">
+					<p class="text-muted text-right">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
+					<p class="text-muted text-right">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
+					<p class="text-muted text-right">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a>
+				</div>
+			</div>
   		</div>
 	</footer>
 
