フッターに<small>タグを使用
フッターにある注釈についてはsmallタグを使うことが推奨されているらしい。(HTML5 )

--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
 			<div class="row">
 				<!-- Left Side -->
 				<div class="col-xs-6">
-					<p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a></p>
-					<p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p>
+					<small><p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a></p></small>
+					<small><p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p></small>
 				</div>
 				
 				<!-- Right Side -->
 				<div class="col-xs-6">
-					<p class="text-muted text-right">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p>
-					<p class="text-muted text-right">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p>
-					<p class="text-muted text-right">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a>
+					<small><p class="text-muted text-right">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p></small>
+					<small><p class="text-muted text-right">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p></small>
+					<small><p class="text-muted text-right">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a></small>
 				</div>
 			</div>
   		</div>
