--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
 		<div class="container">
 			<div class="row">
 				<!-- Left Side -->
-				<div class="col-xs-6">
+				<div class="col-sm-6">
 					<small><p class="text-muted">Copyright © 2016 <a href="https://github.com/razlite">Razlite</a></p></small>
 					<small><p class="text-muted">Copyright © BANDAI NAMCO Entertainment Inc. </p></small>
 				</div>
 				
 				<!-- Right Side -->
-				<div class="col-xs-6">
+				<div class="col-sm-6">
 					<small><p class="text-muted text-right">当サイトにおけるコンテンツの著作権は各著作者に帰属します。<p></small>
 					<small><p class="text-muted text-right">当サイトはBootstrapテーマ「<a href="https://rinhoshizo.la/">Rin</a>」を使用しています。</p></small>
 					<small><p class="text-muted text-right">Powered by <a href="https://deresute.info/">DERESUTE.INFO</a></small>
