GitHubへのリンクとモーダルウィンドウ「Report」の追加。

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
 			<ul class="nav navbar-nav">
 				<li><a href="#" id="about" data-toggle="modal" data-target="#about-modal">About</a></li>
+				<li><a href="#" id="about" data-toggle="modal" data-target="#report-modal">Report</a></li>
+				<li><a href="https://github.com/razlite/Starlight-Select">GitHub</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -86,6 +88,29 @@
 						<dt>Paボタン</dt>
 						<dd>パッション楽曲からランダムで選びます。</dd>
 					</dl>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="report-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<div class="center"><h4 class="modal-title">Starlight Selector</h4></div>
+				</div>
+
+				<div class="modal-body">
+					<div class="center"><h4>Report</h4></div>
+					<p>
+						・楽曲データに不備がある。<br>
+						・不具合を発見した。<br>
+						・こういう機能が欲しい。<br>
+						<br>
+						など、「Starlight Selector」に関するご意見は <a href="https://twitter.com/">@razlite</a> または、<br>
+						<a href="https://github.com/razlite/Starlight-Selector/issues">Starlight-Selector/Issues</a> にて受け付けています。
+					</p>
 				</div>
 			</div>
 		</div>
