--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="title" content="Starlight Selector - Starlight Stage Random Selector" />
 	<meta name="author" content="razlite" />
 	<meta name="description" content="デレステ楽曲をランダムで選びます。" />
-	<meta name="keywords" content="デレステ" />
+	<meta name="keywords" content="デレステ, スターライトセレクター" />
 	
 	<!-- Microsoft
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
